--- a/RIBS_BugFix/슈퍼앱 운영을 위한 확장성 높은 앱 아키텍처 구축/MiniSuperApp-fastcampus/MiniSuperApp.xcodeproj/xcshareddata/xcschemes/MiniSuperAppUITests.xcscheme
+++ b/RIBS_BugFix/슈퍼앱 운영을 위한 확장성 높은 앱 아키텍처 구축/MiniSuperApp-fastcampus/MiniSuperApp.xcodeproj/xcshareddata/xcschemes/MiniSuperAppUITests.xcscheme
@@ -1,33 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1250"
+   LastUpgradeVersion = "1310"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "F5829F5426DB2BC400BFA8CD"
-               BuildableName = "MiniSuperApp.app"
-               BlueprintName = "MiniSuperApp"
-               ReferencedContainer = "container:MiniSuperApp.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "UITESTING"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -51,16 +34,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F5829F5426DB2BC400BFA8CD"
-            BuildableName = "MiniSuperApp.app"
-            BlueprintName = "MiniSuperApp"
-            ReferencedContainer = "container:MiniSuperApp.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -68,16 +41,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F5829F5426DB2BC400BFA8CD"
-            BuildableName = "MiniSuperApp.app"
-            BlueprintName = "MiniSuperApp"
-            ReferencedContainer = "container:MiniSuperApp.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
